<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="textTitle">Tip Calculator</string>
    <string name="PreTipTotal">Enter Bill Total</string>
    <string name="tipAmount">Calculate Tip</string>
    <string name="picture">tip jar</string>
    <string name="prompt">Select Tip</string>
    <string-array name="tipAmount">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
    </string-array>
</resources>
